fixed contrast button and added a beta search bar

--- a/styles/general.css
+++ b/styles/general.css
@@ -4,6 +4,10 @@ body {
   transition: background-color 0.2s;
 }
 
+button {
+  background-color: white;
+}
+
 h2 {
   margin: 0;
 }
