--- a/styles/main-header.css
+++ b/styles/main-header.css
@@ -18,21 +18,41 @@
   height: 55%;
 }
 
-.header-title {
+.search-bar {
+  display: flex;
+  height: 50%;
+}
+
+.search-query {
+  border: none;
+  padding: 0 0 0 9px;
+  border-top-left-radius: 9px;
+  border-bottom-left-radius: 9px;
   flex: 1;
-  color: white;
-  font-size: 1.8rem;
-  margin: 0;
-  font-family: 'Cherry Swash', Arial;
-  white-space: nowrap;
-  font-weight: 500;
-  text-align: center;
+}
+
+.search-button {
+  height: 100%;
+  padding: 0 4px 0 0;
+  border: none;
+  border-top-right-radius: 9px;
+  border-bottom-right-radius: 9px;
+  margin-left: -2px;
+  margin-right: -10px;
+}
+
+.search-icon {
+  height: 100%;
 }
 
 .change-contrast-button {
   height: 100%;
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 35px;
 }
 
 #contrast {
-  height: 100%;
+  margin-top: 4px;
+  height: 70%;
 }
